[package]
name = "hashwires"
version = "0.0.1"
authors = ["Yolan Romailler <yromailler@fb.com>",
           "Konstantinos Chalkias <kostascrypto@fb.com>"]
edition = "2018"

[dependencies]
blake2 = "0.9.0"
blake3="0.3.7"
num-bigint = "0.3.0"
num-traits = "0.2.12"
digest = "0.9.0"
hex = "0.4.2"
rand_chacha = "0.2.2"
rand = "0.7.3"
sha2 = "0.9.1"
sha3 = "0.9.1"
