[package]
name = "hashwires"
version = "0.0.1"
authors = ["Konstantinos Chalkias <kostascrypto@fb.com>", "Yolan Romailler <yromailler@fb.com>"]
edition = "2018"

[dependencies]
blake2 = "0.9.1"
num-bigint = "0.3.0"
num-traits = "0.2.14"
digest = "0.9.0"
hex = "0.4.2"
rand_chacha = "0.3.0"
rand = "0.8.0"
sha2 = "0.9.2"
sha3 = "0.9.1"

[dependencies.blake3]
version = "0.3.7"
features = ["rayon"]
